@@ -1,3 +1,12 @@
+2008-05-30  Aaron Bockover  <abock@gnome.org>
+
+	* src/Clients/Nereid/Nereid/ViewContainer.cs:
+	* src/Core/Banshee.Widgets/Banshee.Widgets/SearchEntry.cs: Make the 
+	filter menu work by inserting a query part when items are selected
+
+	* libbanshee/banshee-player-pipeline.c: Disabled the equalizer yet again
+	because the element is still too buggy in GStreamer causing static
+
 2008-05-30  Gabriel Burt  <gabriel.burt@gmail.com>
 
 	* src/Extensions/Banshee.Lastfm/Banshee.Lastfm.Audioscrobbler/Queue.cs:
